Change it to use slack

--- a/mopidy_slack/ext.conf
+++ b/mopidy_slack/ext.conf
@@ -1,7 +1,7 @@
-[hipchat]
+[slack]
 enabled = true
-jid = ""
-password = ""
+bot_token = ""
+signing_secret = ""
 room_id = ""
 default_playlist = ""
 backend_priority = ""
