--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,6 @@ include .travis.yml
 include LICENSE
 include MANIFEST.in
 include README.rst
-include mopidy_hipchat/ext.conf
+include mopidy_slack/ext.conf
 
 recursive-include tests *.py
